# comfyui-premiere-bridge

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
cprb/: __init__.py  context.py  frame_extract.py  nodes_load.py  nodes_save.py  nodes_send.py  probe.py  routes.py  timeline_read.py  timeline_write.py  version.py
docs/: INSTALL.md  PROTOCOL.md  SPIKES.md
premiere_plugin/: connection.js  helpers.js  import_recipe.js  index.html  layout.js  main.js  manifest.json
scripts/: bump_version.py
tests/: conftest.py  test_frame_extract.py  test_nodes_load.py  test_nodes_save.py  test_nodes_send.py  test_probe.py  test_routes.py  test_routes_ws.py  test_timeline_read.py  test_timeline_write.py
tests/fixtures/: clean_two_clip.xml  empty_sequence.xml  noisy_premiere_export.xml
tests/golden/: two_clips_24.edl  two_clips_24.xml  two_clips_2997.xml
web/: cprb.js
web/cprb/: api.js  nodes.js  send_result.js  settings.js  version.js
